# survivor_prototype

./: Cargo.toml
assets/sprites/: enemies.aseprite  player.aseprite  projectiles.aseprite
src/: collision.rs  combat.rs  components.rs  death.rs  events.rs  experience.rs  main.rs  menu.rs  physics.rs  resources.rs  systems.rs  types.rs  ui.rs  upgrade.rs  weapon.rs
src/weapons/: magick_circle.rs  mod.rs  weapon_upgrade.rs
