[package]
name = "survivors_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
#bevy_rapier2d = { version = "0.27.0", features = ["debug-render-2d"] }
bevy_rapier2d = { git = "https://github.com/Vrixyz/bevy_rapier", branch = "master-bevy_0.15", features = ["debug-render-2d"] }
bevy_prototype_lyon = "0.13.0"
rand = "0.8.5"
fastrand = "2.1.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3